--- a/phone-hunter/index.html
+++ b/phone-hunter/index.html
@@ -10,27 +10,25 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <h1>Welcome to my Phone Hunter!</h1>
     </header>
     <main class="container">
-        <section>
-            <div class="mb-3 w-50">
-                <input id="search-field" type="email" class="form-control" id="exampleFormControlInput1"
-                    placeholder="search your phone">
-                <div id="btn-search" class="btn btn-primary">Search</div>
-            </div>
-        </section>
+        <div class="input-group mb-3 w-75 mx-auto">
+           <input id="search-field" type="text" class="form-control" placeholder="Search your phone">
+           <button id="btn-search" class="btn btn-primary" type="submit">Search</button>
+        </div>
+       
         <!-- display Search Result -->
         <section>
             <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
 
             </div>
             <div id="no-found-message" class="mt-4 d-none">
-                <h3 class="text-warning">No Phone Found. Please try a new search</h3>
+                <h3 class="text-center">No Phone Found. Please try a new search</h3>
             </div>
-            <div id="show-all" class="text-center d-none">
-                <div id="btn-show-all" class="btn btn-primary">Show All</div>
+            <div id="show-all" class="mt-4 text-center d-none">
+                <button id="btn-show-all" type="button" class="btn btn-primary">Show All</button>
             </div>
         </section>
         <!-- loader -->
